# ry-firebase-sync

./: Makefile  README.md  pyproject.toml
src/ry_firebase_sync/: __init__.py  client.py
test/: basic_test.py  smoke_test.py
