[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ry-firebase-sync"
version = "0.1.0"
description = "Shared Firebase + Redis sync runtime bridge"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Ross Yeager" }]
dependencies = [
  "ry-redis-bus",
  "ryutils",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
