[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ry-firebase-sync"
version = "0.1.1"
description = "Shared Firebase + Redis sync runtime bridge"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Ross Yeager" }]
dependencies = [
  "ry-redis-bus",
  "ryutils",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ry_firebase_sync" = ["py.typed"]

# ty type checker (used by lint/lint_full). Mypy config kept in src/mypy_config.ini for mypy target.
[tool.ty.environment]
python-version = "3.12"
extra-paths = ["src", "build", "data_types", "database"]

[tool.ty.src]
exclude = ["**/*_pb2.py"]

[tool.ty.analysis]
allowed-unresolved-imports = [
]

